* October 1, 2009, Kaj de Vos *

Re-enabled AGP drivers for testing.

Work on the boot menu:
- Added option without AGP.
- Added USB drivers to most options, so they can be used with both ATAPI and USB CD drives.
  Left a failsafe option without early loading of USB drivers.
- Split off virtual machine options and failsafe options into separate submenus.
- Added experimental eeepc=true kernel parameter to EeePC option, so the installer can act on it.
- Added experimental option to boot from Ext2FS-formatted USB media.
- Clarified descriptions of several options.

* August 30, 2009, Kaj de Vos *

Added boot option for the Acer Aspire One to the install CD, combining installation from USB and
disabling ACPI; at a report from Ruud Kuin.

* July 18, 2009, Kaj de Vos *

Switched from Debian Certification Authority root certificates collection to LFS collection.
CA-Certificates has too much Debian-specific machinery to get the certificates in the needed form.

* July 6, 2009, Kaj de Vos *

Upgraded most resource packages in the base system.
Started capitalising resource names for best clarity.

Renamed root group to "administrators".

* June 2, 2009, Anthony Morphett *

Made the login app fully keyboard navigable; IconView key handling bugfix.

* May 29, 2009, Anthony Morphett *

Keyboard navigation improvements for compound views such as os::Spinner.
Made the disk partitioner fully keyboard navigable.

* May 27, 2009, Anthony Morphett *

Implemented autologin in the login app and Users&Groups prefs.
Added filter to hide system users & groups in Users&Groups pref.
Make login window remember more settings including per-user keymaps,
and other cosmetic fixes for the login app.

* May 22, 2009, Kristian Van Der Vliet *

Fix /dev/random. It was throwing away 24bits of each call to rand()
(rand() % 256) which seriously compromised the result to the caller.

---- 0.6.6 Released -------------------------------------------------------------------

* January 9, 2009, Kaj de Vos *