@@ -21,15 +21,26 @@ module GrubGen
 		parameters.gsub! 'Boot parameters:', ''
 		parameters.gsub! '/system/kernel.so', ''
 		parameters.gsub! 'rootfs=iso9660', ''
+		parameters.gsub! 'rootfs=ext2', ''
 		parameters.gsub! 'root=@boot', ''
 		parameters.gsub! 'disable_config=true', ''
 		parameters.strip!
 		
+		grubpart = syl_to_grub(sylpart)
+		
 		output = Templates["syllable"].dup
 		
 		# replace placeholders with actual data
-		output.gsub!("##SYLLABLE ROOT DEVICE PATH##", sylpart)
-		output.gsub!("##GRUB ROOT DEVICE##", syl_to_grub(sylpart))
+		output.gsub!("##GRUB USB DEVICE##", grubpart)
+		output.gsub!("##GRUB ROOT DEVICE##",
+			parameters['sata=true'] ? grubpart.gsub('hd2', 'hd0').gsub('hd3', 'hd1') :
+			parameters['eeepc=true'] ? grubpart.gsub('hd1', 'hd0') :
+			grubpart
+		)
+		output.gsub!("##SYLLABLE ROOT DEVICE PATH##",
+			parameters['sata=true'] ? grubpart.gsub('hdc', 'hda').gsub('hdd', 'hdb') :
+			sylpart
+		)
 		output.gsub!("##BOOT PARAMETERS##", parameters)
 				
 		# Add chainload for all partitions other than the Syllable installation partition
